[tool.poetry]
name = "nonebot-plugin-tuan-chatgpt"
version = "0.1.0"
description = "\"Chat with tuanzi ~\""
authors = ["TheLZY"]
license = "MIT License"
readme = "README.md"
packages = [{include = "nonebot_plugin_tuan_chatgpt"}]

[tool.poetry.dependencies]
python = "^3.8"
openai = "^0.27.0"
tiktoken = "^0.3.0"
nonebot2 = "^2.0.0rc3"
nonebot-adapter-onebot = "^2.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
